Finish bottom half of home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -20,7 +23,7 @@
     </nav>
 
     <main>
-
+        <div class="home-top">
             <div class="first-container">
                 <div class="home-first">
                     <div class="name-text">
@@ -38,6 +41,20 @@
                 <img src="icons/book-icon.png" alt="Book">
                 <img src="icons/smily-icon.png" alt="Smily Face">
             </div>
+        </div>
+        <div class="home-bottom">
+            <p class="p1 chivo">
+                I'm currently a CS student at <span class="yellow">Georgia Tech</span> interested in <span class="orange">cloud development</span> and <span class="orange">automation.</span>
+            </p>
+            <p class="dots">···</p>
+            <p class="p2 chivo">
+                In my free time, I love <span class="yellow">reading</span> fantasy and thriller books, watching <span class="yellow">F1 races</span>, and learning about anything <span class="yellow">ancient history</span> related.
+            </p>
+            <p class="dots">···</p>
+            <p class="p3 chivo">
+                I thrive in collaborative environments and enjoy the challenge that comes with learning new skills.
+            </p>
+        </div>
 
 
     </main>
