Save changes prior to React transition

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 </head>
 <body>
     <nav>
-        <h2 class="home-tab">Home</h2>
-        <h2 class="projects-tab">Projects</h2>
-        <h2 class="contact-tab">Contact</h2>
+        <div class="nav-bar">
+            <div class="nav-items">
+                <h2 class="home-tab">Home</h2>
+                <h2 class="projects-tab">Projects</h2>
+                <h2 class="contact-tab">Contact</h2>
+            </div>
+        </div>
     </nav>
 
     <main>
