Add background transition to nav links and link contact page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 <body>
     <nav>
-        <div class="nav-items">
-            <h2 class="home-tab">Home</h2>
-            <h2 class="projects-tab">Projects</h2>
-            <h2 class="contact-tab">Contact</h2>
-        </div>
+        <ul class="nav-items">
+            <li class="nav-item"><a href="#home">Home</a></li>
+            <li class="nav-item"><a href="#projects">Projects</a></li>
+            <li class="nav-item"><a href="https://www.linkedin.com/in/fevinfelix/" target="_blank">Contact</a></li>
+        </ul>
     </nav>
 
     <main>
